# haskellhead

./: README  Setup.hs  TODO  haskellhead.cabal  haskellhead.hs  haskellheadplay.hs  jamesMonad.hs  learn.hs  linkedlist.hs  record.hs  something.hs
src/: Card.hs  Console.hs  Game.hs  Hand.hs  HumanPlayer.hs  Main.hs  Player.hs  PlayerCircle.hs  State.hs  Tests.hs  Util.hs
testsuite/: runtests.sh
testsuite/tests/: CardTests.hs  GameTests.hs  PlayerCircleTests.hs  PlayerTests.hs  Tests.hs
util/: .hscolour
