Name:               haskellhead
Version:            1.3
Description:        Haskell implementation of shithead card game
Author:             James Booth
Build-Type:         Simple
Cabal-Version:      >=1.8

Executable haskellhead
    Main-is:        Main.hs
    Build-Depends:  base >=4.2, mtl >=2, random>=1.0.0.2, random-shuffle>=0.0.2
    Extensions:     FlexibleContexts
    Hs-Source-Dirs: src
